# Setlu

./: .dockerignore  .gitignore  Dockerfile  README.md  evaluate.py  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: backend.yml  frontend.yml
app/: app.py  chatbot.py  config.py  evaluate.py  ingest.py  schemas.py  sessions.py
app/data/: AI_values.md  Agent_RAG_project.md  CV.md  Career_goals.md  Collaboration_styles.md  DataScience.md  Experience_phd.md  FAQ.md  Industry_interest.md  ML_methods.md  Multimodality.md  Problem_solving.md  Publications.md  Teaching.md  Tools_stack.md  Transformers_expertise.md  Webwax_project.md  XAI.md  infos.json  skills.md
app/eval_reports/: eval_report_20260312_121113.json  eval_report_20260312_123124.json  eval_report_20260312_123852.json  eval_report_20260312_123932.json  eval_report_20260312_124004.json  eval_report_20260312_125128.json  eval_report_20260312_125320.json
app/vectorstore/: index.faiss  index.pkl
assets/: index-CgST8mRZ.js
setlu-frontend/: index.html  package-lock.json  package.json  vite.config.js
setlu-frontend/src/: App.jsx
