[project]
name = "maguettebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite",
    "blobfile",
    "datetime",
    "dotenv",
    "faiss-cpu",
    "fastapi",
    "fastapi-users[sqlalchemy]",
    "htbuilder",
    "imagekitio",
    "langchain",
    "langchain-classic",
    "langchain-community",
    "langchain-experimental",
    "langchain-huggingface",
    "langchain-openai",
    "openai",
    "pypdf",
    "sentence-transformers",
    "snowflake",
    "streamlit",
    "tiktoken",
    "uvicorn[standard]",
]
